methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: illegal start of simple pattern
  if (estFaceMur())
^