methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = 
{
  var Color couleur
	if (estFaceMur())
  	{
      return false
    }
  else
  	{
      avance()
  		couleur=getCouleurSol()
      recule()
      return couleur==Color.green
    }
}